--- a/profile.html
+++ b/profile.html
@@ -126,7 +126,7 @@
         <div class="container">
             <h1 class="sub-title">My work </h1>
             <div class="work-list">
-                <div class="work" id="si"><img src="img/work-1.png" >
+                <div class="work" id="si"><img src="work-1.png" >
                 <div class="layer">
                     <h3>social media app </h3>
                     <p>the app connects you yo the talented pepole aroung the world.
@@ -136,7 +136,7 @@
                      </div>
                     </div>
                 <div class="work" id="se">
-                    <img src="img/work-2.png" >
+                    <img src="work-2.png" >
                     <div class="layer">
                         <h3>music app </h3>
                         <p>the app connects you yo the talented pepole aroung the world.
@@ -146,7 +146,7 @@
                         </div>
                             </div>
                 <div class="work" id="ei">
-                    <img src="img/work-3.png" >
+                    <img src="work-3.png" >
                     <div class="layer">
                         <h3>Online shop app </h3>
                         <p>the app connects you yo the talented pepole aroung the world.
